# automation-platform

./: ARCHITECTURE.md  README.md  SETUP.md  TESTING.md
backend/: .env.example  .gitignore  alembic.ini  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/core/: __init__.py  config.py  database.py  dependencies.py  security.py
backend/integrations/: __init__.py
backend/models/: __init__.py  execution.py  execution_log.py  integration.py  user.py  workflow.py
backend/routes/: __init__.py  auth.py  executions.py  integrations.py  workflows.py
backend/scheduler/: __init__.py
backend/schemas/: __init__.py  execution.py  integration.py  user.py  workflow.py
backend/services/: __init__.py  auth_service.py  execution_service.py  integration_service.py  workflow_service.py
backend/utils/: __init__.py  errors.py  helpers.py  logging.py
backend/websocket/: __init__.py
backend/workers/: __init__.py  celery_app.py  tasks.py
backend/workflows/: __init__.py  context.py  engine.py  executor.py  validator.py
backend/workflows/nodes/: __init__.py  base_node.py  conditional_node.py  delay_node.py  http_node.py
frontend/: .gitignore  next.config.js  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/executions/: page.tsx
frontend/src/hooks/: useExecutions.ts  useIntegrations.ts  useWorkflows.ts
frontend/src/lib/: api-client.ts  auth.ts  types.ts
(+18 files in other folders)
